Bug 40987 - Wrong debug output in hostnamed
Summary: Wrong debug output in hostnamed
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Lennart Poettering
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-18 06:11 UTC by Bastien Nocera
Modified: 2011-09-19 13:41 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
hostnamed: Fix "SetStaticHostname" debug output (1.05 KB, patch)
2011-09-18 06:13 UTC, Bastien Nocera
Details | Splinter Review

Description Bastien Nocera 2011-09-18 06:11:43 UTC
.
Comment 1 Bastien Nocera 2011-09-18 06:13:14 UTC
Created attachment 51311 [details] [review]
hostnamed: Fix "SetStaticHostname" debug output

Was using the wrong property (eg. not the one we just set)
Comment 2 Lennart Poettering 2011-09-19 13:41:26 UTC
Thanks! Applied!


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.