hostnamed: Fix "SetStaticHostname" debug output

Was using the wrong property (eg. not the one we just set)

https://bugs.freedesktop.org/show_bug.cgi?id=40987